[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keggtrack"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vidyasagar0405/keggtrack#readme"
Issues = "https://github.com/vidyasagar0405/keggtrack/issues"
Source = "https://github.com/vidyasagar0405/keggtrack"

[tool.hatch.version]
path = "src/keggtrack/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/keggtrack tests}"

[tool.coverage.run]
source_pkgs = ["keggtrack", "tests"]
branch = true
parallel = true
omit = [
  "src/keggtrack/__about__.py",
]

[tool.coverage.paths]
keggtrack = ["src/keggtrack", "*/keggtrack/src/keggtrack"]
tests = ["tests", "*/keggtrack/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
